--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
             <input type="submit" value="Sign Out"/>
         </form>
         
-        <div id="jsGrid"></div>
+        <div id="jsGrid" style="margin:0 auto;"></div>
         
     </body>
 </html>
