--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,13 @@
-<div th:fragment="footer" class="footer-copyright">
-	<div class="container">
-		© 2014 Copyright Text <a class="grey-text text-lighten-4 right"
-			href="#!">More Links</a>
-	</div>
+<div th:fragment="footer">
+	<footer class="page-footer">
+      <div class="footer-copyright">
+        <div class="container">
+          <span>Copyright ©
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>2017 <a class="grey-text text-lighten-2" href="http://themeforest.net/user/pixinvent/portfolio?ref=pixinvent" target="_blank">PIXINVENT</a> All rights reserved.</span>
+          <span class="right hide-on-small-only"> Design and Developed by <a class="grey-text text-lighten-2" href="https://pixinvent.com/">PIXINVENT</a></span>
+        </div>
+      </div>
+    </footer>
 </div>
