--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head lang="en" th:replace="fragments/header"> </head>
-    <body>
-    
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>
-        
-        <div id="jsGrid" style="margin:0 auto;"></div>
-        
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
+<head lang="en" th:replace="fragments/header">
+</head>
+
+<body>
+	<nav>
+		<div class="nav-wrapper">
+			<a href="#" class="brand-logo">Crypto Arbitrage</a>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li><a href="badges.html">Contact</a></li>
+				<li>
+					<form id="signout" th:action="@{/logout}" method="post">
+						<a href="#" onclick="document.getElementById('signout').submit();">Log Out</a>
+					</form>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+	<div id="jsGrid" style="margin: 0 auto;"></div>
+</body>
+
 </html>
