--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,7 @@
 	<script src="webjars/materializecss/0.100.2/js/materialize.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="webjars/materializecss/0.100.2/css/materialize.min.css" />
 	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 	
 	<!--jsgrid css-->
 	<link rel="stylesheet" type="text/css" href="/css/jsgrid-theme.min.css" />
