--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,45 +1,95 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
-<head lang="en" th:replace="fragments/header"> </head>
+<head lang="en" th:replace="fragments/header">
+</head>
 
 <body>
 	<main>
-		<center>
-			<form th:action="@{/home}" method="post">
-				<div class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; margin-top: 100px;">
-					<div th:if="${param.error}">
-						Invalid username and password.
-					</div>
-					<div class="section"></div>
-
-					<div class='row'>
-						<div class='input-field col s12'>
-							<input class='validate' type="text" name='username' id='email' required="true" />
-							<label for='email'>Email</label>
-						</div>
-					</div>
-					<div class='row'>
-						<div class='input-field col m12'>
-							<input class='validate' type='password' name='password' id='password' required="true" />
-							<label for='password'>Password</label>
-						</div>
-						<label style='float: right;'>
-							<b style="color: rgb(163, 84, 84);">Forgot Password?
-							</b>
-						</label>
-					</div>
-					<br />
-					<center>
-						<div class='row'>
-							<button style="margin-left: 65px;" type='submit' name='btn_login' class='col  s6 btn btn-small white black-text  waves-effect z-depth-1 y-depth-1'>Login</button>
-						</div>
-					</center>
-
-				</div>
-			</form>
-		</center>
-	</main>
 	
+		<div id="login-part">
+		<form th:action="@{/home}" method="post">
+			<div
+				class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row"
+				style="display: inline-block; padding: 22px 38px 0px 38px; border: 1px; margin-left: 70%; margin-top: 70px; margin-right: 100px;">
+				
+				<div th:if="${param.error}">Invalid username and password.</div>
+				<div class="section"></div>
+
+				<div class='row'>
+					<div class='input-field col s12'>
+						<input class='validate' type="text" name='username' id='email'
+							required="true" /> <label for='email'>Email</label>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='input-field col m12'>
+						<input class='validate' type='password' name='password'
+							id='password' required="true" /> <label for='password'>Password</label>
+					</div>
+					<label style='float: right;'> <b
+						style="color: rgb(163, 84, 84);">Forgot Password? </b>
+					</label>
+				</div>
+				<br />
+				<center>
+					<div class='row'>
+						<button id="btn_login" style="margin-left: 75px;" type='submit'
+							name='btn_login'
+							class='col  s6 btn btn-small white-text  waves-effect z-depth-1 y-depth-1'>Login</button>
+					</div>
+				</center>
+
+			</div>
+		</form>
+		</div>
+
+
+	<div class="section"></div>
+	<div class="section"></div>
+	<center>
+		<div class="row" style="width: 1000px; margin: 0 auto;">
+			<section class="plans-container" id="plans">
+				<article class="col s12 m6 l6">
+					<div class="card">
+						<div class="card-image gradient-45deg-light-blue-cyan">
+							<div class="card-title">FREE</div>
+							<div class="price">
+								<sup>BTC</sup>0 <sub>/mo</sub>
+							</div>
+						</div>
+						<div class="card-content">
+							<ul class="collection">
+								<li class="collection-item">3 exchanges</li>
+								<li class="collection-item">Percentage difference > 1%</li>
+							</ul>
+						</div>
+					</div>
+				</article>
+				<article class="col s12 m6 l6">
+					<div class="card">
+						<div class="card-image gradient-45deg-amber-amber accent-2">
+							<div class="card-title">PREMIUM</div>
+							<div class="price">
+								<sup>BTC</sup>0.0001 <sub>/mo</sub>
+							</div>
+						</div>
+						<div class="card-content">
+							<ul class="collection">
+								<li class="collection-item">5+ exhanges</li>
+								<li class="collection-item">Unlimited percentage difference</li>
+							</ul>
+						</div>
+					</div>
+				</article>
+			</section>
+		</div>
+
+
+	</center>
+	</main>
+
 </body>
 </html>
