--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,13 +21,13 @@
 				<div class='row'>
 					<div class='input-field col s12'>
 						<input class='validate' type="text" name='username' id='email'
-							required="true" /> <label for='email'>Email</label>
+							required="true" placeholder=" "/> <label for='email'>Email</label>
 					</div>
 				</div>
 				<div class='row'>
 					<div class='input-field col m12'>
 						<input class='validate' type='password' name='password'
-							id='password' required="true" /> <label for='password'>Password</label>
+							id='password' required="true" placeholder=" "/> <label for='password'>Password</label>
 					</div>
 					<label style='float: right;'> <b
 						style="color: rgb(163, 84, 84);">Forgot Password? </b>
