--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,9 +11,8 @@
 	
 		<div id="login-part">
 		<form th:action="@{/home}" method="post">
-			<div
-				class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row"
-				style="display: inline-block; padding: 22px 38px 0px 38px; border: 1px; margin-left: 70%; margin-top: 70px; margin-right: 100px;">
+			<div id="login-form"
+				class="z-depth-3 y-depth-3 x-depth-3 white green-text lighten-4 row">
 				
 				<div th:if="${param.error}">Invalid username and password.</div>
 				<div class="section"></div>
@@ -36,7 +35,7 @@
 				<br />
 				<center>
 					<div class='row'>
-						<button id="btn_login" style="margin-left: 75px;" type='submit'
+						<button id="btn_login" type='submit'
 							name='btn_login'
 							class='col  s6 btn btn-small white-text  waves-effect z-depth-1 y-depth-1'>Login</button>
 					</div>
@@ -46,8 +45,6 @@
 		</form>
 		</div>
 
-
-	<div class="section"></div>
 	<div class="section"></div>
 	<center>
 		<div class="row" style="width: 1000px; margin: 0 auto;">
