--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8511,11 +8511,12 @@ tr.group:hover {
 
 #btn_login {
 	background-color: #2e9fd6;
-	margin-left: 60px;
+	margin-left: 59spx;
 }
 
 #login-part {
 	background-image:url(/images/textured-background.png);
+	background-size: 100%;
 	height: 550px;
 }
 
@@ -8523,7 +8524,7 @@ tr.group:hover {
 	display: inline-block; 
 	padding: 22px 38px 0px 38px; 
 	border: 1px; 
-	margin-left: 70%; 
+	margin-left: 67%; 
 	margin-top: 120px; 
 	margin-right: 100px;
 	box-shadow: 0px 0px 29px 0px rgba(0,0,0,0.75);
