--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8511,25 +8511,34 @@ tr.group:hover {
 
 #btn_login {
 	background-color: #2e9fd6;
-	margin-left: 59spx;
+	margin-left: 79px;
+	margin-top: -20px;
 }
 
 #login-part {
 	background-image:url(/images/textured-background.png);
 	background-size: 100%;
-	height: 550px;
+	height: 570px;
 }
 
 #login-form {
 	display: inline-block; 
-	padding: 22px 38px 0px 38px; 
+	padding: 10px 10px 0px 10px; 
 	border: 1px; 
 	margin-left: 67%; 
-	margin-top: 120px; 
+	margin-top: 80px; 
 	margin-right: 100px;
 	box-shadow: 0px 0px 29px 0px rgba(0,0,0,0.75);
-	border-radius: 21px 21px 21px 21px;
-	width: 300px;
-	height: 350px;
+	border-radius: 11px 11px 11px 11px;
+	width: 330px;
+	height: 410px;
+}
+
+#login-title {
+	margin-top: -10px;
+}
+
+#invalid-credentials {
+	margin-top: -13px
 }
 
