--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
 <body>
 	<nav class="navbar-custom">
 		<div class="nav-wrapper">
-			<a href="#" class="brand-logo">Crypto Arbitrage</a>
+			<a href="#" class="brand-logo center">Crypto Arbitrage</a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="badges.html">Contact</a></li>
 				<li>
