--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,4 +12,7 @@
 	<!--jsgrid js-->
 	<script src="/js/jsgrid-script.js" type="text/javascript"></script>
 	<script src="/js/jsgrid.min.js" type="text/javascript"></script>
+	
+	<!--custom-->
+	<script src="/js/main.js" type="text/javascript"></script>
 </head>
