--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head lang="en" th:replace="fragments/header">
@@ -14,8 +13,7 @@
 				<li><a href="badges.html">Contact</a></li>
 				<li>
 					<form id="signout" th:action="@{/logout}" method="post">
-						<a href="#" onclick="document.getElementById('signout').submit();">Log
-							Out</a>
+						<a href="#" onclick="document.getElementById('signout').submit();">Log Out</a>
 					</form>
 				</li>
 			</ul>
@@ -23,8 +21,17 @@
 	</nav>
 
 	<div class="section"></div>
+
+
+	<div id="applyExchanges">
+		<div id="exchangesDropdown" th:replace="fragments/exchangesDropdown"></div>
+		<a id=btn_applyExchanges" class="waves-effect waves-light  btn"><i class="material-icons left">search</i>Search</a>
+	</div>
 	<div class="section"></div>
 	
+	<div class="section"></div>
+	<div class="section"></div>
+
 	<div id="jsGrid" style="margin: 0 auto;"></div>
 </body>
 
