--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8525,13 +8525,13 @@ tr.group:hover {
 	display: inline-block; 
 	padding: 10px 10px 0px 10px; 
 	border: 1px; 
-	margin-left: 67%; 
 	margin-top: 80px; 
-	margin-right: 100px;
+	margin-right: 170px;
 	box-shadow: 0px 0px 29px 0px rgba(0,0,0,0.75);
 	border-radius: 11px 11px 11px 11px;
 	width: 330px;
 	height: 410px;
+	float: right;
 }
 
 #login-title {
