Search by exhanges (js part)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8548,7 +8548,7 @@ tr.group:hover {
 	float: left;
 }
 
-#btn_applyExchanges {
+#btnApplyExchanges {
 	float: right;
 	margin-top: 15px;
 	background-color: #2e9fd6;
