--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -25,7 +25,7 @@
 
 	<div id="applyExchanges">
 		<div id="exchangesDropdown" th:replace="fragments/exchangesDropdown"></div>
-		<a id=btn_applyExchanges" class="waves-effect waves-light  btn"><i class="material-icons left">search</i>Search</a>
+		<a id=btnApplyExchanges" class="waves-effect waves-light  btn"><i class="material-icons left">search</i>Search</a>
 	</div>
 	<div class="section"></div>
 	
