Search by exhanges (backend)

--- a/src/main/resources/templates/fragments/exchangesDropdown.html
+++ b/src/main/resources/templates/fragments/exchangesDropdown.html
@@ -1,6 +1,6 @@
 <div id="exchangesDropdown" th:fragment="exchangesDropdown" class="input-field col s12 m6">
 	<select multiple class="icons">
-		<option value="" disabled selected style="font-weight: bold">Choose Exchanges</option>
+		<option value="" disabled selected>Choose Exchanges</option>
 		<option value="Bittrex">Bittrex</option>
 		<option value="Cryptopia">Cryptopia</option>
 		<option value="Livecoin">Livecoin</option>
