--- a/src/main/resources/templates/fragments/exchangesDropdown.html
+++ b/src/main/resources/templates/fragments/exchangesDropdown.html
@@ -4,5 +4,6 @@
 		<option value="Bittrex">Bittrex</option>
 		<option value="Cryptopia">Cryptopia</option>
 		<option value="Livecoin">Livecoin</option>
+		<option value="Poloniex">Poloniex</option>
 	</select>
 </div>
