Profit filter dropdown + backend implementation

--- a/src/main/resources/templates/fragments/exchangesDropdown.html
+++ b/src/main/resources/templates/fragments/exchangesDropdown.html
@@ -1,5 +1,5 @@
 <div id="exchangesDropdown" th:fragment="exchangesDropdown" class="input-field col s12 m6">
-	<select multiple class="icons">
+	<select name="exchangesDropdown" multiple class="icons">
 		<option value="" disabled selected>Choose Exchanges</option>
 		<option value="Bittrex">Bittrex</option>
 		<option value="Cryptopia">Cryptopia</option>
