--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -24,11 +24,14 @@
 
 
 	<div id="applyExchanges">
-		<div id="exchangesDropdown" th:replace="fragments/exchangesDropdown"></div>
-		<a id=btnApplyExchanges" class="waves-effect waves-light  btn"><i class="material-icons left">search</i>Search</a>
+		<div id="dropdowns">
+			<div id="profitPercentageDropdown" th:replace="fragments/profitPercentageDropdown"></div>
+			<div id="exchangesDropdown" th:replace="fragments/exchangesDropdown"></div>
+		</div>
+		<a id="btnApplyExchanges" class="waves-effect waves-light  btn"><i class="material-icons left">search</i>Search</a>
 	</div>
 	<div class="section"></div>
-	
+
 	<div class="section"></div>
 	<div class="section"></div>
 
