--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8542,9 +8542,9 @@ tr.group:hover {
 	margin-top: -13px
 }
 
-#exchangesDropdown {
+#dropdowns {
 	height : auto;
-	width : 700px;
+	width : 750px;
 	float: left;
 }
 
@@ -8557,4 +8557,16 @@ tr.group:hover {
 #applyExchanges {
 	width: 950px;
 	margin: 0 auto;
+}
+
+#exchangesDropdown {
+	height : auto;
+	width : 500px;
+	float: left;
+}
+
+#profitPercentageDropdown {
+	height : auto;
+	width : 200px;
+	float: right;
 }
