--- a/src/main/resources/templates/fragments/exchangesDropdown.html
+++ b/src/main/resources/templates/fragments/exchangesDropdown.html
@@ -5,5 +5,6 @@
 		<option value="Cryptopia">Cryptopia</option>
 		<option value="Livecoin">Livecoin</option>
 		<option value="Poloniex">Poloniex</option>
+		<option value="Hitbtc">Hitbtc</option>
 	</select>
 </div>
