--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
 <body>
 	<nav class="navbar-custom">
 		<div class="nav-wrapper">
-			<a href="#" class="brand-logo center">Crypto Arbitrage</a>
+			<img id="smallLogo" src="/images/logo_small.png">
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="badges.html">Contact</a></li>
 				<li>
