Added main logo

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,8 +8,8 @@
 <body>
 
 	<main>
-
 	<div id="login-part">
+	<img id="bigLogo" src="/images/logo_big.png">
 		<form th:action="@{/home}" method="post">
 			<div id="login-form" class="z-depth-3 y-depth-3 x-depth-3 white lighten-4 row">
 
