Postgres + liquibase + connection to Heroku db

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class='row'>
 					<div class='input-field col s12'>
-						<i class="material-icons prefix pt-5">email</i> <input class='validate' type="text" name='username' id='email'
+						<i class="material-icons prefix pt-5">email</i> <input class='validate' type="text" name='username' id='username'
 							required="true" placeholder=" " /> <label for='email'>Email</label>
 					</div>
 				</div>
