--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Hello World!</title>
-    </head>
-    <body>
-    </body>
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
+<head lang="en" th:replace="fragments/header">
+</head>
+
+<body id="registerPage">
+
+	<main>
+	<div id="login-part" th:replace="fragments/registerForm">
+	</main>
+
+</body>
+</html>
