--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8511,12 +8511,6 @@ tr.group:hover {
 	margin-top: -20px;
 }
 
-#login-part {
-	background-image:url(/images/textured-background.png);
-	background-size:100% 100%;
-	height: 570px;
-}
-
 #login-form {
 	display: inline-block; 
 	padding: 10px 10px 0px 10px; 
@@ -8580,4 +8574,17 @@ tr.group:hover {
 #bigLogo {
 	position: absolute;
 	padding-left: 15px;
+	padding-top: 15px;
+}
+
+body, html {
+    height: 100%;
+}
+
+#homePage, #registerPage { 
+  background: url(/images/background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
