--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,4 +14,15 @@
 	<!--custom-->
 	<script src="/js/main.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110466619-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'UA-110466619-1');
+	</script>
+	
 </head>
