--- a/src/main/resources/templates/fragments/loginForm.html
+++ b/src/main/resources/templates/fragments/loginForm.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="input-field col s6 m6 l6">
 					<p class="margin right-align medium-small">
-						<a href="page-forgot-password.html">Forgot password ?</a>
+						<a href="page-forgot-password.html"></a>
 					</p>
 				</div>
 			</div>
