--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8599,3 +8599,19 @@ body, html {
 	color: white;
 	padding-left: 10px;
 }
+
+#contactForm {
+	border: 1px; 
+	margin-top: 40px; 
+	margin-left: 40px;
+	box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
+	border-radius: 5px 5px 5px 5px;
+	width: 845px;
+	height: 205px;
+	padding-top: 10px;
+	padding-left: 10px;
+}
+
+#contactMailIcon {
+	float: left;
+}
