--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,22 +6,9 @@
 </head>
 
 <body>
-	<nav class="navbar-custom">
-		<div class="nav-wrapper">
-			<img id="smallLogo" src="/images/logo_small.png">
-			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="badges.html">Contact</a></li>
-				<li>
-					<form id="signout" th:action="@{/logout}" method="post">
-						<a href="#" onclick="document.getElementById('signout').submit();">Log Out</a>
-					</form>
-				</li>
-			</ul>
-		</div>
-	</nav>
+	<nav th:replace="fragments/navbar" />
 
 	<div class="section"></div>
-
 
 	<div id="applyExchanges">
 		<div id="dropdowns">
